# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("lib") {
  crate_name = "cxx"
  crate_type = "rlib"
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2018"
  cargo_pkg_version = "1.0.97"
  cargo_pkg_authors = "David Tolnay <dtolnay@gmail.com>"
  cargo_pkg_name = "cxx"
  cargo_pkg_description = "Safe interop between Rust and C++"
  deps = [ "//third_party/rust/crates/cxx/macro:lib(${host_toolchain})" ]
  features = [
    "alloc",
    "std",
  ]
  build_root = "build.rs"
  build_sources = [ "build.rs" ]
}

config("cxx_cppdeps_header_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("cxx_cppdeps") {
  part_name = "build_framework"
  subsystem_name = "build"
  defines = [ "RUST_CXX_NO_EXCEPTIONS" ]
  public_configs = [ ":cxx_cppdeps_header_config" ]
  sources = [
    "//third_party/rust/crates/cxx/include/cxx.h",
    "//third_party/rust/crates/cxx/src/cxx.cc",
  ]
  deps = [ "//third_party/rust/crates/cxx:lib" ]
  if (is_win) {
    defines += [ "CXX_RS_EXPORT=__declspec(dllexport)" ]
  } else {
    defines += [ "CXX_RS_EXPORT=__attribute__((visibility(\"default\")))" ]
  }
}
